[package]
name = "rust-vanitygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { path = "../rust-bitcoin", features = ["rand", "use-serde"] }

[patch.crates-io]
secp256k1 = { path = "../rust-secp256k1" }
