[package]
name = "rust-vanitygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", features = ["rand", "use-serde"] }
hex = "0.4"

[patch.crates-io]
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1" }
